Card fix display, add doc, restructure

--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -9,14 +9,24 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 ## Overview
 
-Lorem ipsum
+The card component is used to provide a brief summary of content or a task, often with a link to more detail. Cards are frequently displayed alongside other cards to group related content or tasks.
 
 ## Default example
 
-### a. Card Type 
+### a. Card default
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-type-1" />
+  <Story id="components-cards--card-default" />
+</Canvas>
+
+```html
+
+```
+
+### b. Card default with link
+
+<Canvas withSource="none">
+  <Story id="components-cards--card-default-with-link" />
 </Canvas>
 
 ```html
@@ -25,90 +35,80 @@ Lorem ipsum
 
 ## Variant examples
 
-### a. Card Type 
+### a. Card square overlay title
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-type-2" />
+  <Story id="components-cards--card-square-overlay-title" />
 </Canvas>
 
 ```html
 
 ```
 
-### b. Card Type 
+### b. Card square overlay text
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-type-3" />
+  <Story id="components-cards--card-square-overlay-text" />
 </Canvas>
 
 ```html
 
 ```
 
-### c. Card Type 
+### c. Card square overlay text link
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-type-4" />
+  <Story id="components-cards--card-square-overlay-text-link" />
 </Canvas>
 
 ```html
 
 ```
 
-### d. Card Type 
+### d. Card portrait overlay
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-type-5" />
+  <Story id="components-cards--card-portrait-overlay" />
 </Canvas>
 
 ```html
 
 ```
 
-### e. Card Type 
+### e. Card landscape overlay
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-type-6" />
+  <Story id="components-cards--card-landscape-overlay" />
 </Canvas>
 
 ```html
 
 ```
 
-### f. Card Type 
+### f. Card horizontal
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-type-7" />
+  <Story id="components-cards--card-horizontal" />
 </Canvas>
 
 ```html
 
 ```
 
-### g. Card Type 
+### g. Card horizontal shaded
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-type-8" />
+  <Story id="components-cards--card-horizontal-shaded" />
 </Canvas>
 
 ```html
 
 ```
 
-### h. Card Type 
+### h. Card horizontal align media right
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-type-9" />
-</Canvas>
-
-```html
-
-```
-
-### i. Card Type 
-
-<Canvas withSource="none">
-  <Story id="components-cards--card-type-10" />
+  <Story id="components-cards--card-horizontal-align-media-right" />
 </Canvas>
 
 ```html
