--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -55,10 +55,10 @@ The card component is used to provide a brief summary of content or a task, ofte
 
 ```
 
-### c. Card square overlay text link
+### c. Card square overlay link
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-square-overlay-text-link" />
+  <Story id="components-cards--card-square-overlay-link" />
 </Canvas>
 
 ```html
@@ -114,5 +114,3 @@ The card component is used to provide a brief summary of content or a task, ofte
 ```html
 
 ```
-
-## How and when to use
