--- a/packages/storybook-html/src/components/side-nav/side-nav.docs.mdx
+++ b/packages/storybook-html/src/components/side-nav/side-nav.docs.mdx
@@ -66,9 +66,8 @@ A vertical list of links for site navigation typically placed next to the body c
         <a href="#" class="uq-side-nav__link">Item 1</a>
       </li>
       <li class="uq-side-nav__list-item uq-side-nav__list-item--has-subnav uq-side-nav__list-item--active uq-side-nav__list-item--open">
-        <a href="#" class="uq-side-nav__link" aria-haspopup="true" aria-expanded="true">Item 2</a>
-        <span class="uq-side-nav__list-item__sub-toggle" tabindex="0">Open</span>
-        <ul class="uq-side-nav__list uq-side-nav__list--level-2" aria-label="Side nav list2 submenu">
+        <a href="#" class="uq-side-nav__link">Item 2</a>
+        <ul class="uq-side-nav__list uq-side-nav__list--level-2" aria-label="Side navigation item 2 submenu">
           <li class="uq-side-nav__list-item">
             <a href="#" class="uq-side-nav__link">Item 2.1</a>
           </li>
@@ -93,6 +92,4 @@ A vertical list of links for site navigation typically placed next to the body c
 
 ## Accessibility
 
-Add `aria-label` tag to the side nav component `<nav>` element.
-
-## Known issues
+Add `aria-label` tag to the `<nav>` element and to the submenu level 2 `<ul>`.
