--- a/packages/storybook-html/src/components/side-nav/side-nav.docs.mdx
+++ b/packages/storybook-html/src/components/side-nav/side-nav.docs.mdx
@@ -60,14 +60,14 @@ A vertical list of links for site navigation typically placed next to the body c
   </h3>
 
   <!-- Side nav -->
-  <nav class="uq-side-nav__container" aria-label="Side navigation">
+  <nav class="uq-side-nav__container" aria-label="Side nav">
     <ul class="uq-side-nav__list uq-side-nav__list--level-1">
       <li class="uq-side-nav__list-item">
         <a href="#" class="uq-side-nav__link">Item 1</a>
       </li>
       <li class="uq-side-nav__list-item uq-side-nav__list-item--has-subnav uq-side-nav__list-item--active uq-side-nav__list-item--open">
         <a href="#" class="uq-side-nav__link">Item 2</a>
-        <ul class="uq-side-nav__list uq-side-nav__list--level-2" aria-label="Side navigation item 2 submenu">
+        <ul class="uq-side-nav__list uq-side-nav__list--level-2" aria-label="Side nav item 2 submenu">
           <li class="uq-side-nav__list-item">
             <a href="#" class="uq-side-nav__link">Item 2.1</a>
           </li>
