--- a/packages/storybook-html/src/components/core/typography-applying.story.mdx
+++ b/packages/storybook-html/src/components/core/typography-applying.story.mdx
@@ -132,6 +132,70 @@ export const TypographyUsage = () => `
 
 <Story name="Typogrphy Usage">{TypographyUsage.bind({})}</Story>
 
+## Inline text elements
+
+Use the HTML inline text Elements to define the meaning, structure, or style of a word, line, or any arbitrary piece of text.
+Reference: [MDN HTML elements reference](https://developer.mozilla.org/en-US/docs/Web/HTML/Element)
+
+export const InlineElements = () => `
+<table>
+  <thead>
+    <tr>
+      <th>Example</th>
+      <th>Element</th>
+      <th>Desription</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="#">link text</a></td>
+      <td><code>&lt;a  href="#"&gt;&lt;/a&gt;</code></td>
+      <td>Creates a hyperlink to web pages, files, email addresses, locations in the same page, or anything else a URL can address.</td>
+    </tr>
+    <tr>
+      <td><abbr title="The University of Queensland">UQ</abbr></td>
+      <td><code>&lt;abbr title="something"&gt;&lt;/abbr&gt;</code></td>
+      <td>an abbreviation or acronym; the optional title attribute can provide an expansion or description for the abbreviation.</td>
+    </tr>
+    <tr>
+      <td><b>Bold Text</b></td>
+      <td><code>&lt;b&gt;&lt;/b&gt;</code></td>
+      <td>Used to draw the reader's attention to the element's contents, which are not otherwise granted special importance.</td>
+    </tr>
+    <tr>
+      <td>Text<br> Break</td>
+      <td><code>&lt;br&gt;</code></td>
+      <td>produces a line break in text (carriage-return). It is useful for writing a poem or an address, where the division of lines is significant.</td>
+    </tr>
+    <tr>
+      <td><cite>UQ Design system</cite></td>
+      <td><code>&lt;cite&gt;&lt;/cite&gt;</code></td>
+      <td>Used to describe a reference to a cited creative work, and must include the title of that work.</td>
+    </tr>
+    <tr>
+      <td><code>Some code</code></td>
+      <td><code>&lt;code&gt;&lt;/code&gt;</code></td>
+      <td>Displays its contents styled in a fashion intended to indicate that the text is a short fragment of computer code.</td>
+    </tr>
+    <tr>
+      <td><dfn title="Humanities and Social Sciences">HASS</dfn></td>
+      <td><code>&lt;dfn title="something"&gt;&lt;/dfn&gt;</code></td>
+      <td>Used to indicate the term being defined within the context of a definition phrase or sentence.</td>
+    </tr>
+    <td><em>Emphasis</em></td>
+      <td><code>&lt;em&gt;&lt;/em&gt;</code></td>
+      <td>Marks text that has stress emphasis. The <em> element can be nested, with each level of nesting indicating a greater degree of emphasis.</td>
+    </tr>
+    <td><kbd>Shift</kbd> + <kbd>S</kbd></td>
+      <td><coded>&lt;kbd&gt;&lt;/kbd&gt;</code></td>
+      <td>Represents a span of inline text denoting textual user input from a keyboard, voice input, or any other text entry device.</td>
+    </tr>
+  </tbody>
+</table>
+`;
+
+<Story name="Inline Elements">{InlineElements.bind({})}</Story>
+
 ## Example Typography
 
 export const ExampleType = () => `
